vlib/v/parser/tests/fn_attributes_duplicate_multiple.vv
@[inline]
@[inline]
fn foo() {}

fn main() {
    foo()
}
